我的智库连接

--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -58,15 +58,15 @@
         <ul class="mine-view fly-list" style="display:block;">
           <% collections.forEach(function(collection){ %>
           <li class="fly-list-li">
-            <a href="user/home.html" class="fly-list-avatar">
+            <a href="/users/home?uid=<%= collection.get('id') %>" class="fly-list-avatar">
               <img src="<%= collection.get('avatar') %>" alt="">
             </a>
             <h2 class="fly-tip">
-              <a href="jie/detail.html"><%= collection.get('nickname') %></a>
+              <a href="/users/home?uid=<%= collection.get('id') %>"><%= collection.get('nickname') %></a>
             </h2>
             <p>
-              <span><a href="user/home.html"><%= collection.get('d_disciplinesFields') %></a></span>
-              <span><%= collection.get('d_firstDisciplines') %></span>
+              <span><%= collection.get('d_disciplinesFields') %> ></a></span>
+              <span><%= collection.get('d_firstDisciplines') %> ></span>
               <span><%= collection.get('d_secondDisciplines') %></span>
               <span class="fly-list-hint">
                 <i class="iconfont" title="回答">&#xe60c;</i> <%= collection.get('d_consultCount') %>
