--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,21 +8,22 @@
 <link href="/stylesheets/flexslider.css" rel="stylesheet" />
 <link href="/stylesheets/style1.css" rel="stylesheet" />
 <link rel="stylesheet" href="/stylesheets/font-awesome.min.css">
-<script src="/javascripts/jquery.min.js"></script>
+<script src="/javascripts/jquery-2.1.1.min.js"></script>
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); }</script>
 </head>
 <body>
   <div class="header">
     <div class="container"> <a class="navbar-brand" href="/"> 博士直通车 </a>
-      <div class="menu"> <a class="toggleMenu" href="#"><img src="images/nav_icon.png" alt="" /> </a>
+      <div class="menu"> <a class="toggleMenu" href="#"><img src="/res/images/nav_icon.png" alt="" /> </a>
         <ul class="nav" id="nav">
           <li class="current"><a href="/about">关于我们</a></li>
           <li><a href="/contact">联系我们</a></li>
+          <li><a href="/feedback">反馈</a></li>
           <li><a href="users/login">登录</a></li>
           <li><a href="users/reg">注册</a></li>
           <div class="clear"></div>
         </ul>
-        <script type="text/javascript" src="js/responsive-nav.js"></script>
+        <script type="text/javascript" src="/javascripts/responsive-nav.js"></script>
       </div>
     </div>
   </div>
@@ -67,7 +68,7 @@
 
         </div>
         <div class="col-sm-3 col-xs-6"> <i class="fa fa-map-marker fa-5x"></i>
-          
+
         </div>
       </div>
     </div>
