--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
       <ul class="nav" id="nav">
         <li><a href="/about">关于我们</a></li>
         <li><a href="/contact">联系我们</a></li>
+        <li><a href="/feedback">反馈</a></li>
         <li><a href="users/login">登录</a></li>
         <li><a href="users/reg">注册</a></li>
         <div class="clear"></div>
