增加一个注册提醒

--- a/views/users/reg.ejs
+++ b/views/users/reg.ejs
@@ -163,6 +163,7 @@
         },
         function(data, status){
           if(data=='success'){
+            layer.msg("注册成功。");
             window.location.href="/topic";
           }else{
             layer.msg(data);
