搜索进入信息bug

--- a/views/search/wisdom-result.ejs
+++ b/views/search/wisdom-result.ejs
@@ -61,7 +61,7 @@ layui.use(['jquery','form','layer','flow'], function(){
           string += '<li class="fly-list-li">';
           string += '<a href="users/home?uid='+ item.objectId +'" class="fly-list-avatar"><img src="'+ item.avatar +'" alt=""></a>';
           string += '<h2 class="fly-tip">';
-          string += '<a href="users/home?uid='+item.objectId+'"> '+ item.nickname +' </a>';
+          string += '<a href="/users/home?uid='+item.objectId+'"> '+ item.nickname +' </a>';
           string += '</h2>';
           string += '<p>';
           string += '<span>'+ item.d_disciplinesFields +' ></span>';
