--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,6 +3,7 @@
   <p><a href="/" target="_blank" title="博士直通车">博士直通车</a> 人才与企业交流平台 </p>
   <p>Copyright &copy; 2015 广州中青博信息科技有限公司. All Rights Reserved. </p>
   <p>广州中青博信息科技有限公司 版权所有<p>
+  <a href="/直通车512.apk">apk</a>
 </div>
 
 <script src="/res/layui/layui.js"></script>
