--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,7 +57,7 @@
   <div class="footer_bottom">
     <div class="copy">
       <p>Copyright &copy; 2017 广州中青博信息科技有限公司. Powered By <a href="/" target="_blank" title="博士直通车">博士直通车</a> </p>
-      <a href="/直通车512.apk" class="banner_btn"><span>APK文件下载</span></a>
+      <a href="/boshizhitongche.apk" class="banner_btn"><span>点此下载安装文件(Android)</span></a>
       <img src="/res/images/downloadAPK.png" alt="" width="150px" style="margin-top: 35px">
     </div>
   </div>
